fix left/right alignment issue

--- a/src/media/tooltip/styles.scss
+++ b/src/media/tooltip/styles.scss
@@ -11,10 +11,12 @@
 
 .left {
   margin-left: -$tooltip-pip-width;
+  margin-top: 0;
 }
 
 .right {
   margin-left: $tooltip-pip-width;
+  margin-top: 0;
 }
 
 @include foundation-tooltip;
